# pivo-bot

./: bot.py  loader.py  pyproject.toml
commands/: __init__.py  admins.py  default.py  employee.py
database/models/: __init__.py  address.py  config.py  reports.py  requests.py  user.py
database/services/: __init__.py  addresses.py  reports.py  requests.py  users.py
filters/: status.py
handlers/: __init__.py  addresses.py  admin_handlers.py  base_handlers.py  employee_handlers.py  profile.py  search.py
handlers/admin/: __init__.py  admin_handlers.py  reports.py  requests.py
keyboards/: fabrics.py
middlewares/: __init__.py  admin.py  user.py
texts/: __init__.py
utils/: __init__.py  employeeAccess.py  generateQrCode.py  getButtonsText.py  getDate.py  getSkip.py  getSlice.py  getUsername.py  logging.py  readBarcode.py  readQR.py
